# project_traumland

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
journal/: models.py  urls.py  views.py
journal/migrations/: 0001_initial.py
templates/journal/: base.html  create_journal_form.html  delete_journal_form.html  journal_list.html  update_journal_form.html
templates/registration/: login.html
traumland/: asgi.py  settings.py  urls.py  wsgi.py
