[tool.poetry]
name = "project_traumland"
version = "0.1.0"
description = ""
authors = ["Adrianus West <adrianus_west@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
